# Mining-Intellect-Backend

./: .env.example  .gitignore  AnalogWeightingPlan.md  README.md  RulesPlan.md  config.py  langgraph.json  pyproject.toml  requirements.txt  run_geocode_batch.py
docs/: GOLD_RESOURCE_PREDICTOR_V2.md  PROJECT_RESEARCH_ROADMAP.md  api.md
graphs/: analog_finder.py  geocode_project.py  gold_model_builder.py  model_runner.py  pipeline_orchestrator.py  project_discovery.py  project_research.py  report_generator.py
nodes/: bootstrap.py  drilling_extractor.py  exa_answer.py  exa_search.py  field_extractor.py  gap_detector.py  geo_taxonomy.py  geocoder.py  gold_resource_predictor.py  gold_resource_storage.py  inferred_extractor.py  lessons.py  lessons_priors.py  llm_factory.py  model_builder.py  ni_43_101_extractor.py  parallel_gold_model.py  pdf_generator.py  project_intelligence.py  rules_engine.py  supabase_ops.py
schemas/: __init__.py  analog.py  analog_rule.py  gold_resource_predictor.py  pipeline.py  project.py  report.py
scripts/: analog_quality_judge.py  audit_gold_split_coverage.py  backfill_geological_profiles.py  backfill_gold_mre_truth.py  backfill_gold_projects.py  backtest_model_1.py  backtest_parallel.py  bulk_enrich.py  compile_rules.py  diagnose.py  enrich_analog_data.py  eval_gold_corpus.py  evaluate_blind_gold_baseline.py  gold_backtest_diagnostics.py  migrate_companies.py  migrate_rules_schema.py  preview_pdf.py  refresh_thin_projects.py  repopulate_rules.py  run_gold_resource_backtest_v2.py  run_gold_resource_predictor_v2.py  run_sql_migration.py  (+7 more)
(+64 files in other folders)
