[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "mining-intellect-backend"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    # LangGraph / LangChain
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langsmith>=0.1.0",

    # LLM providers
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "openai>=1.0.0",

    # Supabase
    "supabase>=2.4.0",

    # Data / validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # HTTP
    "requests>=2.31.0",
    "aiohttp>=3.9.0",

    # Geocoding
    "geopy>=2.4.0",

    # PDF generation (HTML/CSS → PDF via WeasyPrint)
    "weasyprint>=62.0",
    "Jinja2>=3.1.0",

    # Config
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["graphs*", "nodes*", "schemas*", "scripts*"]
